--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                 <h3>LIKE</h3>
               </div>
 
-              <ul class="emoji2">
+              <ul class="emoji">
                 <li>
                   <img
                     src="img/kiwoom.svg"
@@ -144,9 +144,10 @@
 
           <div class="intro_rightDown">
             <div data-splitting class="aspiration">
-              어두운 밤 태양의 도움을 받아 밝은 빛으로 세상을 환하게 비추는
-              달처럼<br />저도 도움을 주고받으며 언제 어디서나 누군가를 환하게
-              비추는 사람이 되겠습니다
+              호기심이 많아 많은 것을 시도하고자 합니다. 저의 큰 호기심으로 많은
+              시도 끝에 오롯이 저만의 디자인이 나오는 그날까지 끊임없이
+              노력하는<br />
+              웹디자이너 유예인이 되겠습니다.
             </div>
           </div>
         </div>
@@ -154,23 +155,28 @@
 
       <section class="logo" id="logo">
         <ul class="logo_left">
-          <li><img src="img/logo_beige.png" alt="logo" /></li>
-          <li><img src="img/logo_brown_dark.png" alt="logo" /></li>
+          <li><img src="img/logo.png" alt="logo" /></li>
+          <li><img src="img/logo_green.png" alt="logo" /></li>
         </ul>
         <div class="logo_center">
           <div class="motion">
             <div class="keywords">
               <img
                 src="img/keywords.svg"
-                alt="제 로고를 만들 때 참고 및 포함할 키워드입니다."
+                alt="제 로고를 만들 때 참고 및 포함한 키워드입니다."
               />
             </div>
             <div class="ferriswheel"></div>
           </div>
         </div>
         <ul class="logo_right">
-          <li><img src="img/logo_brown.png" alt="logo" /></li>
-          <li><img src="img/logo_brown.png" alt="logo" /></li>
+          <li>
+            header에 사용된 로고는 제 영문 이름과 제가 좋아하는 구름을 합쳐서
+            심플하고, 귀여운 모양으로 제작하였습니다. 또한 색다르게 로고 제작 시
+            사용 된 키워드를 관람차에 실어서 관람차가 돌아가는 모션을 주어
+            약간의 재미 요소도 주었습니다.
+          </li>
+          <li></li>
         </ul>
       </section>
 
