--- a/index.html
+++ b/index.html
@@ -144,10 +144,8 @@
 
           <div class="intro_rightDown">
             <div data-splitting class="aspiration">
-              호기심이 많아 많은 것을 시도하고자 합니다. 저의 큰 호기심으로 많은
-              시도 끝에 오롯이 저만의 디자인이 나오는 그날까지 끊임없이
-              노력하는<br />
-              웹디자이너 유예인이 되겠습니다.
+              호기심이 많아 많은 것을 시도하고자 합니다.<br />다양한 시도 끝에
+              완벽한 결과물을 완성해 내는 웹디자이너가 되고싶습니다.
             </div>
           </div>
         </div>
@@ -171,12 +169,19 @@
         </div>
         <ul class="logo_right">
           <li>
-            header에 사용된 로고는 제 영문 이름과 제가 좋아하는 구름을 합쳐서
-            심플하고, 귀여운 모양으로 제작하였습니다. 또한 색다르게 로고 제작 시
-            사용 된 키워드를 관람차에 실어서 관람차가 돌아가는 모션을 주어
-            약간의 재미 요소도 주었습니다.
+            header에 사용된 로고는 저의 영문 이름과 제가 좋아하는 구름을 합쳐서
+            심플하고, 귀여운 모양으로 제작하였습니다. 또한 색다른 느낌을 주고자
+            로고 제작 시 사용 된 키워드를 관람차에 실어서 관람차가 돌아가는
+            모션을 주어 약간의 재미 요소도 주었습니다.
           </li>
-          <li></li>
+          <li>
+            <p>
+              <span>#이름</span> <span>#영문이름</span> <span>#심플</span>
+              <span>#귀여운</span> <span>#좋아하는것</span>
+              <span>#YOOYEIN</span>
+              <span>#구름</span>
+            </p>
+          </li>
         </ul>
       </section>
 
@@ -359,7 +364,10 @@
       </section>
 
       <section class="finish" id="finish">
-        <h1>page4</h1>
+        <h1>
+          저의 큰 호기심으로 많은 시도 끝에 오롯이 저만의 디자인이 나오는
+          그날까지 끊임없이 노력하는 웹디자이너 유예인이 되겠습니다.
+        </h1>
       </section>
     </div>
   </body>
