--- a/index.html
+++ b/index.html
@@ -74,16 +74,27 @@
               <ul class="emoji">
                 <li>
                   <img
-                    src="img/dragon.png"
-                    alt="용띠라서 귀여운 용 이미지를 넣었습니다"
+                    src="img/linedragon.png"
+                    alt="용띠라서 귀여운 용 이미지를 사용했습니다"
                   />
                 </li>
-                <li><img src="img/tree.png" alt="태어난 달이 11월입니다" /></li>
                 <li>
-                  <img src="img/pencil.png" alt="돌잡이 때 연필을 잡았습니다" />
+                  <img
+                    src="img/snowman.png"
+                    alt="겨울에 태어나서 겨울하면 생각나는 눈사람 이미지를 사용했습니다"
+                  />
                 </li>
                 <li>
-                  <img src="img/scorpion.png" alt="별자리는 전갈자리입니다" />
+                  <img
+                    src="img/linepencil.png"
+                    alt="돌잡이 때 연필을 잡았습니다"
+                  />
+                </li>
+                <li>
+                  <img
+                    src="img/linescorpion.png"
+                    alt="별자리는 전갈자리입니다"
+                  />
                 </li>
               </ul>
             </li>
@@ -99,11 +110,16 @@
                     alt="제가 좋아하는 야구팀은 키움히어로즈입니다"
                   />
                 </li>
-                <li><img src="img/icecoffee.png" alt="커피를 좋아합니다" /></li>
+                <li>
+                  <img
+                    src="img/icecoffee.png"
+                    alt="커피 마시는 것을 좋아합니다"
+                  />
+                </li>
                 <li>
                   <img
                     src="img/portafilter.png"
-                    alt="커피를 만드는 것도 좋아합니다"
+                    alt="커피를 직접 만드는 것도 좋아합니다"
                   />
                 </li>
                 <li>
@@ -129,7 +145,7 @@
                 <li>
                   <img
                     src="img/singing.png"
-                    alt="노래를 부르는 것도 취미입니다"
+                    alt="노래 부르는 것이 취미입니다"
                   />
                 </li>
                 <li>
@@ -168,11 +184,12 @@
           </div>
         </div>
         <ul class="logo_right">
-          <li>
-            header에 사용된 로고는 저의 영문 이름과 제가 좋아하는 구름을 합쳐서
-            심플하고, 귀여운 모양으로 제작하였습니다. 또한 색다른 느낌을 주고자
-            로고 제작 시 사용 된 키워드를 관람차에 실어서 관람차가 돌아가는
-            모션을 주어 약간의 재미 요소도 주었습니다.
+          <li data-splitting>
+            header에 사용된 로고는<br />저의 영문 이름 "YOOYEIN"과<br />제가
+            좋아하는 구름을 합쳐서<br />심플하고, 귀여운 모양으로
+            제작하였습니다.<br />또한 색다른 느낌을 주고자 로고 제작 시<br />사용
+            된 키워드를 관람차에 실어서 관람차가 돌아가는 모션을 주어 약간의
+            재미 요소도 주었습니다.
           </li>
           <li>
             <p>
@@ -268,7 +285,10 @@
         <div class="project_web">
           <ul class="website">
             <li>
-              <div class="spc"></div>
+              <a href=" https://yooyi00.github.io/spc/" target="_blank">
+                <div class="spc"></div
+              ></a>
+
               <div class="web_txt">
                 <h2>SPC 홈페이지</h2>
                 <p>제작기간 : 한 달</p>
@@ -281,15 +301,15 @@
                 <li><img src="img/css.png" alt="css" /></li>
                 <li><img src="img/jquery.png" alt="jquery" /></li>
                 <li>
-                  <a href=" https://yooyi00.github.io/spc/" target="_blank"
-                    ><img src="img/github.png" alt="github address"
-                  /></a>
+                  <img src="img/github.png" alt="github address" />
                 </li>
                 <li class="none"></li>
               </ul>
             </li>
             <li>
-              <div class="storytaco"></div>
+              <a href="https://yooyi00.github.io/story/" target="_blank"
+                ><div class="storytaco"></div
+              ></a>
               <div class="web_txt">
                 <h2>STORYTACO 홈페이지</h2>
                 <p>제작기간 : 한 달</p>
@@ -302,15 +322,13 @@
                 <li><img src="img/css.png" alt="css" /></li>
                 <li><img src="img/jquery.png" alt="jquery" /></li>
                 <li>
-                  <a href="https://yooyi00.github.io/story/" target="_blank"
-                    ><img src="img/github.png" alt="github address"
-                  /></a>
+                  <img src="img/github.png" alt="github address" />
                 </li>
                 <li class="none"></li>
               </ul>
             </li>
             <li>
-              <div class="dental"></div>
+              <a href="" target="_blank"><div class="dental"></div></a>
               <div class="web_txt">
                 <h2>팀 프로젝트 - 치과 홈페이지 제작</h2>
                 <p>제작기간 : 한 달</p>
@@ -324,9 +342,7 @@
                 <li><img src="img/jquery.png" alt="jquery" /></li>
                 <li><img src="img/figma.png" alt="figma" /></li>
                 <li>
-                  <a href="" target="_blank"
-                    ><img src="img/github.png" alt="github"
-                  /></a>
+                  <img src="img/github.png" alt="github" />
                 </li>
               </ul>
             </li>
@@ -352,7 +368,7 @@
             <div class="design_bg03"></div>
           </li>
           <li>
-            <div class="design_bg01"></div>
+            <div class="design_bg04"></div>
           </li>
           <li>
             <div class="design_bg02"></div>
