--- a/index.html
+++ b/index.html
@@ -192,6 +192,7 @@
             재미 요소도 주었습니다.
           </li>
           <li>
+            <h4>사용된 키워드</h4>
             <p>
               <span>#이름</span> <span>#영문이름</span> <span>#심플</span>
               <span>#귀여운</span> <span>#좋아하는것</span>
@@ -371,7 +372,7 @@
             <div class="design_bg04"></div>
           </li>
           <li>
-            <div class="design_bg02"></div>
+            <div class="design_bg05"></div>
           </li>
           <li>
             <div class="design_bg03"></div>
@@ -380,10 +381,21 @@
       </section>
 
       <section class="finish" id="finish">
-        <h1>
-          저의 큰 호기심으로 많은 시도 끝에 오롯이 저만의 디자인이 나오는
-          그날까지 끊임없이 노력하는 웹디자이너 유예인이 되겠습니다.
-        </h1>
+        <div class="finWrap">
+          <ul class="finLeft">
+            <li>
+              <a href="#"><img src="img/popup_illu.png" alt="" /></a>
+            </li>
+            <li>
+              <a href="#"><img src="img/popup_illu.png" alt="" /></a>
+            </li>
+          </ul>
+
+          <div class="finRight">
+            저의 큰 호기심으로 많은 시도 끝에<br />오롯이 저만의 디자인이 나오는
+            그날까지<br />끊임없이 노력하는 웹디자이너 유예인이 되겠습니다.
+          </div>
+        </div>
       </section>
     </div>
   </body>
