--- a/index.html
+++ b/index.html
@@ -382,7 +382,12 @@
 
       <section class="finish" id="finish">
         <div class="finWrap">
-          <ul class="finLeft">
+          <div class="finLeft">
+            저의 큰 호기심으로 많은 시도 끝에<br />오롯이 저만의 디자인이 나오는
+            그날까지<br />끊임없이 노력하는 웹디자이너 유예인이 되겠습니다.
+          </div>
+
+          <ul class="finRight">
             <li>
               <a href="#"><img src="img/popup_illu.png" alt="" /></a>
             </li>
@@ -390,11 +395,6 @@
               <a href="#"><img src="img/popup_illu.png" alt="" /></a>
             </li>
           </ul>
-
-          <div class="finRight">
-            저의 큰 호기심으로 많은 시도 끝에<br />오롯이 저만의 디자인이 나오는
-            그날까지<br />끊임없이 노력하는 웹디자이너 유예인이 되겠습니다.
-          </div>
         </div>
       </section>
     </div>
