--- a/index.html
+++ b/index.html
@@ -12,6 +12,13 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+      integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <script src="js/jquery-3.7.1.min.js"></script>
     <script src="splitting.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.7/dist/gsap.min.js"></script>
@@ -37,17 +44,6 @@
           <li><a href="#finish">FINISH</a></li>
         </ul>
       </header>
-    </div>
-
-    <div class="bottom_fix">
-      <ul class="page">
-        <li class="on">INTRO</li>
-        <li>LOGO</li>
-        <li>ABOUT ME</li>
-        <li>PROJECT</li>
-        <li>DESIGN</li>
-        <li>FINISH</li>
-      </ul>
     </div>
 
     <div id="container">
@@ -393,6 +389,23 @@
             </li>
             <li>
               <a href="#"><img src="img/popup_illu.png" alt="" /></a>
+            </li>
+          </ul>
+
+          <ul class="social">
+            <li>
+              <i class="fa-solid fa-paper-plane"></i>
+              <p>yooyi00@naver.com</p>
+            </li>
+            <li>
+              <i class="fa-solid fa-phone"></i>
+              <p>010-6322-3228</p>
+            </li>
+            <li>
+              <a href="https://open.kakao.com/o/smvAcjtf" target="_blank"
+                ><i class="fa-solid fa-comment"></i>
+                <p>Go to Open KakaoTalk</p></a
+              >
             </li>
           </ul>
         </div>
