--- a/index.html
+++ b/index.html
@@ -355,7 +355,11 @@
         <ul class="project_design">
           <li>
             <div class="design_bg01">
-              <div class="design_txt"></div>
+              <div class="design_txt">
+                <h2>SNS 홍보 목업</h2>
+                <p>- 3D효과 활용</p>
+                <p>- 봄맞이 쿠폰 일러스트 작업</p>
+              </div>
             </div>
           </li>
           <li>
