--- a/index.html
+++ b/index.html
@@ -357,22 +357,41 @@
             <div class="design_bg01">
               <div class="design_txt">
                 <h2>SNS 홍보 목업</h2>
-                <p>- 3D효과 활용</p>
                 <p>- 봄맞이 쿠폰 일러스트 작업</p>
               </div>
             </div>
           </li>
           <li>
-            <div class="design_bg02"></div>
+            <div class="design_bg02">
+              <div class="design_txt">
+                <h2>FLEA MARKET 홍보 포스터 목업</h2>
+                <p>- FLEA MATKET 일러스트 작업</p>
+              </div>
+            </div>
           </li>
           <li>
-            <div class="design_bg03"></div>
+            <div class="design_bg03">
+              <div class="design_txt">
+                <h2>SNS 홍보 목업</h2>
+                <p>- 1+1 쿠폰 일러스트 작업</p>
+              </div>
+            </div>
           </li>
           <li>
-            <div class="design_bg04"></div>
+            <div class="design_bg04">
+              <div class="design_txt">
+                <h2>추석 할인 행사 정류장 홍보 목업</h2>
+                <p>- 추석맞이 할인 행사 일러스트 작업</p>
+              </div>
+            </div>
           </li>
           <li>
-            <div class="design_bg05"></div>
+            <div class="design_bg05">
+              <div class="design_txt">
+                <h2>POP-UP STORE 전자기기 목업</h2>
+                <p>- POP-UP STORE 오픈 일러스트 작업</p>
+              </div>
+            </div>
           </li>
           <li>
             <div class="design_bg03"></div>
